// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-gvTkRN kJJomX"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-gvTkRN kJJomX"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-gvTkRN kJJomX"
>
  <span
    className="sc-uoHVL hfZMGN"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-gvTkRN kJJomX"
>
  <div
    className="sc-jPGeSq eYyahU"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-gvTkRN jFcmrm"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-gvTkRN bCSItO"
  size="small"
/>
`;
